--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: rgb(0, 221, 4);
+}
+
+#banner {
+    width: 100%;
 }
 
 h1 {
