--- a/style.css
+++ b/style.css
@@ -68,3 +68,8 @@ h2 {
     justify-content: space-evenly;
     align-items: center;
 }
+
+.item-servicos {
+    display: flex;
+    border: 1px solid #cccccc;
+}
