--- a/style.css
+++ b/style.css
@@ -76,6 +76,6 @@ h2 {
     width: 15%;
     height: 290px;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     color: blue;
 }
