--- a/style.css
+++ b/style.css
@@ -78,4 +78,7 @@ h2 {
     justify-content: center;
     align-items: flex-start;
     color: blue;
+    font-size: 50px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-transform: uppercase;
 }
