--- a/style.css
+++ b/style.css
@@ -81,4 +81,6 @@ h2 {
     font-size: 50px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-transform: uppercase;
+    border-radius: 15px;
+    padding-top: 2%;
 }
