--- a/style.css
+++ b/style.css
@@ -87,6 +87,6 @@ h2 {
 }
 
 #item1 {
-    background-image: url(https://images.unsplash.com/photo-1697596694565-276b0373f27e?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-background-size: cover;
+    background-image: url(https://images.pexels.com/photos/3184644/pexels-photo-3184644.jpeg);
+    
 }
