--- a/style.css
+++ b/style.css
@@ -88,5 +88,5 @@ h2 {
 
 #item1 {
     background-image: url(https://images.pexels.com/photos/3184644/pexels-photo-3184644.jpeg);
-    
+    background-size: cover;
 }
