--- a/style.css
+++ b/style.css
@@ -90,3 +90,13 @@ h2 {
     background-image: url(https://images.pexels.com/photos/3184644/pexels-photo-3184644.jpeg);
     background-size: cover;
 }
+
+#item2 {
+    background-image: url(https://images.pexels.com/photos/18999275/pexels-photo-18999275/free-photo-of-conferencia-entrevista-coletiva-educacao-instrucao.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    background-size: cover;
+}
+
+#item3 {
+    background-image: url(https://images.pexels.com/photos/5621951/pexels-photo-5621951.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    background-size: cover;
+}
